Fix key events on mobile

--- a/client/app/remote-control/keyboard/keyboard.component.scss
+++ b/client/app/remote-control/keyboard/keyboard.component.scss
@@ -12,6 +12,7 @@
     border-radius: .5rem;
     background: #57565c;
     color: #acabb1;
+    font-family: monospace;
   }
 
   .recent {
